--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -374,7 +374,9 @@
                                                                             color: #000;
                                                                             font-weight: bold;
                                                                         }
-                                                                        
+                                                                        .leaflet-popup-content {
+                                                                            max-width: 350px !important; /* Increase popup width if needed */
+                                                                        }
                                                                         .button-group-infowindow {
                                                                             display: flex;
                                                                             gap: 3px;
