--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -59,7 +59,7 @@
                                                                         <script src="/leaflet/leaflet.js"></script>
                                                                         <script src="https://unpkg.com/leaflet.vectorgrid@latest/dist/Leaflet.VectorGrid.js"></script>
                                                                         <script src="https://cdn.jsdelivr.net/npm/text-image/dist/text-image.js"></script>
-                                                                        <script src="https://ha8tks.github.io/Leaflet.CQzones/src/L.CQzones.js"></script>
+                                                                        <script src="/leaflet/L.CQzones.js"></script>
                                                                         <script src="https://ha8tks.github.io/Leaflet.Maidenhead/src/L.Maidenhead.js"></script>
                                                                         <script src="a.ob.js"></script>
                                                                     <style>
