--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -54,12 +54,16 @@
                                                                             }
                                                                         }
                                                                     </script>
-                                                                    <link rel="stylesheet" href="/leaflet/leaflet.css" />
+                                                                    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+                                                                         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+                                                                         crossorigin=""/>
                                                                         <!-- Move leaflet.js before dependent scripts -->
-                                                                        <script src="/leaflet/leaflet.js"></script>
+                                                                        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+                                                                             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+                                                                             crossorigin=""></script>
                                                                         <script src="https://unpkg.com/leaflet.vectorgrid@latest/dist/Leaflet.VectorGrid.js"></script>
                                                                         <script src="https://cdn.jsdelivr.net/npm/text-image/dist/text-image.js"></script>
-                                                                        <script src="/leaflet/L.CQzones.js"></script>
+                                                                        <script src="https://ha8tks.github.io/Leaflet.CQzones/src/L.CQzones.js"></script>
                                                                         <script src="https://ha8tks.github.io/Leaflet.Maidenhead/src/L.Maidenhead.js"></script>
                                                                         <script src="a.ob.js"></script>
                                                                     <style>
